# AngryTodd

./: .gitignore  Angry_todd_kicad.kicad_sch  CMakeLists.txt  LICENSE  README.md
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/include/AngryTodd/: AngryToddLookAndFeel.h  DSPChain.h  InputCoupling.h  InterstageFilter.h  LevelContourFilter.h  MasterSection.h  PluginEditor.h  PluginProcessor.h  ToneStack.h  TriodeStage.h  Tube.h
plugin/src/: AngryToddLookAndFeel.cpp  InputCoupling.cpp  InterstageFilter.cpp  LevelContourFilter.cpp  MasterSection.cpp  PluginEditor.cpp  PluginProcessor.cpp  ToneStack.cpp  TriodeStage.cpp  Tube.cpp
